/branch-benchmark

/branch-mapper

/develop

0.1.2
    + Clean golint warnings; some small refactoring.

0.1.1
    + Refactoring and increase code coverage.

0.1.0
    + Add types:
        + Value - sets data to scalars, slices, and structs with type coercion if necessary.
        + Getter - acts as value lookup when filling structs.
        + Field - intermediate type for iterating struct fields.